bk_ida/gccida/g1/instantiate_virtual_regs
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_virtual_regs/src/function.c:4039:6: error: use of undeclared identifier 'v7'
rtx *v7; // rdi 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_virtual_regs/src/function.c:4058:36: error: expected expression
instantiate_virtual_regs_1( ( rtx *)&rtx[2], rtx, 1); 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_virtual_regs/src/function.c:4059:36: error: expected expression
instantiate_virtual_regs_1( ( rtx *)rtx[3].fld, 0LL, 0); 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_virtual_regs/src/function.c:4061:36: error: expected expression
instantiate_virtual_regs_1( ( rtx *)&rtx[4], 0LL, 0); 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_virtual_regs/src/function.c:4073:1: error: use of undeclared identifier 'v7'
v7 = &v5->x_parm_reg_stack_loc[v6]; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_virtual_regs/src/function.c:4074:7: error: use of undeclared identifier 'v7'
if ( *v7 ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_virtual_regs/src/function.c:4075:29: error: use of undeclared identifier 'v7'
instantiate_virtual_regs_1( v7, 0LL, 0); 
                            ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_virtual_regs/src/obj/function.o] Error 1
